--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -3,7 +3,7 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: "Titillium Web", sans-serif;
+	font-family: var(--font-family), sans-serif;
 }
 
 .header-container{
@@ -11,14 +11,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.6rem 3rem;
+	height: 80px;
+    padding: 0 3rem;
     color: var(--bg-primary-color);
     overflow: hidden;
 }
 
 .logo img{
     width: 10rem;
-    height: 3rem;
+    height: 2.5rem;
 }
 
 .nav-menu{
@@ -29,6 +30,7 @@
 .nav-link{
     color: var(--secondary-color);
     text-decoration: none;
+	font-weight: var(--font-weight-bold);
     padding: 5px 10px;
     transition: 0.3s;
 }
@@ -90,9 +92,9 @@
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
-		gap: 1.5rem;
+		gap: 0.8rem;
 		background-color: var(--bg-primary-color);
-		transition: 1s;
+		transition: 0.5s;
 	}
 
     .responsive-nav {
@@ -106,7 +108,7 @@
 	}
 
     .nav-link{
-		font-size: 1.2rem;
+		font-size: 1rem;
 	}
 
 	.auth-links{
