--- a/src/assets/css/Home/Home_Section1.css
+++ b/src/assets/css/Home/Home_Section1.css
@@ -3,19 +3,57 @@
     background-image: url('../../images/dj-playing-in-nightclub.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    justify-content: end;
+    padding: 2rem;
 }
 
 .Home-Section1-container .box{
     background-color: var(--primary-color);
-    width: 45%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
-    height: 350px;
+    gap: 10px;
+    max-width: 30%;
+    padding: 2rem;
+    line-height: 6rem;
 }
 
 .Home-Section1-container .box h1{
     font-family: var(--heading-font-family);
     font-size: 6rem;
+}
+
+.Home-Section1-container .box p{
+    font-size: 24px;
+    font-family: var(--font-family);
+    font-weight: var(--font-weight-bold);
+    line-height: 2rem;
+}
+
+.Home-Section1-box-btn{
+    border: 2px solid black;
+    padding: 1rem;
+    margin-right: 1.5rem;
+    cursor: pointer;
+    font-family: var(--font-family);
+    font-weight: var(--font-weight-bold);
+    transition: background-color 0.5s ease;
+}
+
+.Home-Section1-box-btn:first-child{
+    background-color: black;
+    color: white;
+}
+.Home-Section1-box-btn:first-child:hover{
+    background-color: white;
+    color: black;
+}
+.Home-Section1-box-btn:nth-child(2){
+    background: transparent;
+
+}
+.Home-Section1-box-btn:nth-child(2):hover{
+    background-color: black;
+    color: white;
 }
