--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,8 +1,7 @@
 /* Root colors ( variables )  */
 @import url("https://fonts.googleapis.com/css2?family=Gotu&display=swap"); /* Gotu font family */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
-/* Bebas Neue + Roboto */
-
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 :root {
   --bg-primary-color: #000000;
   --primary-color: #004eeb;
