--- a/src/assets/css/Home/Home_Section1.css
+++ b/src/assets/css/Home/Home_Section1.css
@@ -3,9 +3,17 @@
     background-image: url('../../images/dj-playing-in-nightclub.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    display: flex;
-    justify-content: end;
-    padding: 2rem;
+    background-position: center;
+    /* display: grid;
+    grid-template-rows: 10% 80% 10%;
+    grid-template-columns: 10% 80% 10%; */
+}
+.Home-Section1-second-container{
+    width: 90%;
+    margin: 0 auto;
+    position: relative;
+    /* grid-column: 2/3;
+    grid-row: 2/3; */
 }
 
 .Home-Section1-container .box{
@@ -14,14 +22,21 @@
     flex-direction: column;
     justify-content: center;
     gap: 10px;
-    max-width: 30%;
+    min-width: 30%;
     padding: 2rem;
     line-height: 6rem;
+    margin-left: auto;
+    position: absolute;
+    top: 1rem;
+    right: 0rem;
 }
 
 .Home-Section1-container .box h1{
     font-family: var(--heading-font-family);
     font-size: 6rem;
+}
+.Home-Section1-container .box h1 .br-mobile{
+    display: none;
 }
 
 .Home-Section1-container .box p{
@@ -56,4 +71,37 @@
 .Home-Section1-box-btn:nth-child(2):hover{
     background-color: black;
     color: white;
+}
+
+@media (max-width: 1024px){
+    .Home-Section1-container .box h1{
+        font-size: 5rem;
+        line-height: 5rem;
+    }
+}
+
+@media (max-width: 480px){
+    .Home-Section1-container{
+        display: flex;
+        justify-content: end;
+        align-items: end;
+    }
+    .Home-Section1-container .box{
+        position: static;
+        width: 100%;
+    }
+    .Home-Section1-container .box h1{
+        font-size: 4rem;
+        line-height: 4rem;
+    }
+    .Home-Section1-container .box h1 .br-desktop{
+        display: none;
+    }
+    .Home-Section1-container .box h1 .br-mobile{
+        display: block;
+    }
+
+    .Home-Section1-box-btn{
+        width: 40%;
+    }
 }
