--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -1,5 +1,5 @@
 footer {
-  background-color: var(--bg-primary-color);
+  background-color: var(--footer-color);
   color: var(--secondary-color);
 }
 .container {
