--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6,6 +6,7 @@
   --bg-primary-color: #000000;
   --primary-color: #004eeb;
   --secondary-color: #ffffff;
+  --footer-color: #181918;
   --font-family: "Roboto";
   --heading-font-family: "Bebas Neue";
   --font-weight-bold: 600;
