--- a/src/assets/css/CloudDrives/CloudDrives_Section2.css
+++ b/src/assets/css/CloudDrives/CloudDrives_Section2.css
@@ -49,13 +49,19 @@
   #CloudDrives_Section2 h1 {
     font-size: 3rem;
   }
+  #CloudDrives_Section2_Header p {
+    margin: 0 0 5rem 0;
+  }
   .CloudDrives_Section2_Grid {
-    grid-template-columns: repeat(2, minmax(24rem, 1fr));
+    grid-template-columns: repeat(2, minmax(20rem, 1fr));
   }
 }
 @media (max-width: 820px) {
   #CloudDrives_Section2 h1 {
     font-size: 2rem;
+  }
+  #CloudDrives_Section2_Header p {
+    margin: 0 0 1rem 0;
   }
   .CloudDrives_Section2_Grid {
     grid-template-columns: 1fr;
