--- a/src/assets/css/Components/ProductCard.css
+++ b/src/assets/css/Components/ProductCard.css
@@ -26,3 +26,9 @@
   border-radius: 50%;
   background-color: white;
 }
+@media (max-width: 820px) {
+  #product_card {
+    width: 20rem;
+    margin-top: 3rem;
+  }
+}
