--- a/src/assets/css/Home/Home_Section5.css
+++ b/src/assets/css/Home/Home_Section5.css
@@ -81,12 +81,15 @@
 }
 @media (max-width: 720px) {
   #Home_section5 {
-    margin: 0;
+    margin: 0 auto;
   }
   #Home_section5 h1,
   #Home_section5 p {
     text-align: center;
     margin: 0.5rem 0;
+  }
+  #Home_section5 > p:nth-of-type(2) {
+    margin: 0.5rem 0 2.5rem 0;
   }
   #Home_section5_main {
     flex-direction: column;
