--- a/src/assets/css/UserDashboard/MyPlans_Content.css
+++ b/src/assets/css/UserDashboard/MyPlans_Content.css
@@ -38,13 +38,49 @@
     background-color: #2e2e2e;
   }
   
-  .listen-slider {
-    width: 70%;
-  }
-  
   .download-icon {
     color: #00f;
     cursor: pointer;
+  }
+
+  .listen{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .listen-button {
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 14px;
+    margin: 5px;
+    padding: 0;
+  }
+  .listen-button:hover{
+    background: none;
+  }
+
+  progress {
+    width: 100%;
+    height: 5px; /* You can adjust as needed */
+    color: #00f; /* Color of the progress bar */
+    -webkit-appearance: none; /* Override default appearance */
+    appearance: none;
+  }
+
+  progress::-webkit-progress-bar {
+    background-color: #eee; /* Color of the background of the bar */
+  }
+  
+  progress::-webkit-progress-value {
+    background-color: #00f; /* Color of the progress indicator */
+  }
+  
+  /* For other browsers like Firefox */
+  progress::-moz-progress-bar {
+    background-color: #00f; /* Color of the progress indicator */
   }
   
   .download-all-btn {
@@ -78,9 +114,12 @@
       padding: 5px;
       font-size: 0.8em;
     }
-  
-    .listen-slider {
-      width: 50%;
+
+    .listen-button {
+        background: none;
+        border: none;
+        color: #00f;
+        cursor: pointer;
     }
   
     .download-all-btn {
