--- a/src/assets/css/Faq/faqForm.css
+++ b/src/assets/css/Faq/faqForm.css
@@ -1,27 +1,28 @@
-.contact-form-container {
+.faq-form-container {
     width: 80%;
     margin: 0 auto;
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
     font-family: Arial, sans-serif;
 }
-.contact-form-heading{
+.faq-form-heading{
     width: 50%;
     margin: auto;
 }
-.contact-form-heading h1{
+.faq-form-heading h1{
     text-align: center;
-    margin-bottom: 20px;
     font-family: var(--heading-font-family);
     font-size: 4em;
     font-weight: 500;
 }
 
-.contact-form-heading .subheading {
+.faq-form-heading .subheading {
     text-align: center;
-    margin-bottom: 20px;
     font-family: var(--font-family);
     font-weight: 500;
+    margin: 0 auto;
+    max-width: 60%;
+    margin-bottom: 3em;
 }
 
 .input-group {
@@ -42,7 +43,7 @@
     padding: 1.5em;
     border: 1px solid #fff;
     background-color: #000; 
-    color: #fff; /* White text color for better visibility on black background */
+    color: #fff;
 }
 
 .input-group textarea {
@@ -50,7 +51,7 @@
     resize: vertical;
 }
 
-.contact-form-container button {
+.faq-form-container button {
     padding: 20px 80px;
     background-color: blue; 
     font-family: var(--font-family);
@@ -72,20 +73,20 @@
 
 /* Responsive */
 @media (max-width: 768px) {
-    .contact-form-container {
+    .faq-form-container {
         width: 95%;
     }
 
-    .contact-form-container button {
+    .faq-form-container button {
         display: block;
         width: 100%; /* Full-width on mobile */
         margin-right: 0; /* Resetting the margin */
         margin-bottom: 10px; /* Some spacing from the bottom element */
     }
-    .contact-form-heading{
+    .faq-form-heading{
         width: 100%;
     }
-    .contact-form-heading h1{
+    .faq-form-heading h1{
         font-size: 3em;
     }
     #notice-after-button {
