connect backend with homepage V_0.1

--- a/src/assets/css/Home/Home_Section4.css
+++ b/src/assets/css/Home/Home_Section4.css
@@ -4,12 +4,14 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center 8rem;
-  padding-bottom: 14rem;
+  padding-bottom: 10rem;
+  width: 90%;
+  margin: 0 auto;
 }
 #home_section4 {
   display: flex;
-  justify-content: space-around;
-  max-width: 1000px;
+  justify-content: space-evenly;
+  /* max-width: 1000px; */
   margin: 5rem auto;
 }
 .Home_Section4_ProductCard_img {
