--- a/src/assets/css/Components/AddToCartOrBuy.css
+++ b/src/assets/css/Components/AddToCartOrBuy.css
@@ -29,11 +29,24 @@
 .product-count {
   margin: 0.75rem 0;
 }
-.product-count p {
+.product-count input {
   display: inline-block;
+  background: transparent;
+  color: white;
+  font-weight: bold;
+  border: none;
+  outline: none;
+  text-align: center;
   font-size: 1.75rem;
-  margin: 0 0.75rem;
+  width: 120px;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 #AddToCartOrBuy > button:nth-of-type(1) {
   display: block;
   border: 1px solid white;
@@ -43,6 +56,7 @@
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
   font-weight: 600;
+  width: 250px;
 }
 #AddToCartOrBuy > button:nth-of-type(2) {
   background-color: #004eeb;
@@ -50,4 +64,5 @@
   border: none;
   font-size: 1.25rem;
   font-weight: 600;
+  width: 250px;
 }
