--- a/src/assets/css/Home/Home_Section5.css
+++ b/src/assets/css/Home/Home_Section5.css
@@ -14,6 +14,10 @@
   margin-bottom: 1rem;
   color: white;
 }
+#Home_section5 button{
+  background-color: #004eeb;
+  color: white;
+}
 #Home_section5_main {
   display: flex;
   justify-content: space-between;
@@ -109,6 +113,9 @@
   #Home_section5 {
     max-width: 700px;
   }
+  #Home_section5_main_categories h2::after{
+    width: 15%;
+  }
 }
 @media (max-width: 720px) {
   #Home_section5 {
@@ -116,40 +123,88 @@
   }
   #Home_section5 h1,
   #Home_section5 p {
-    text-align: center;
     margin: 0.5rem 0;
   }
+
+  #Home_section5_main_categories h2::after{
+    width: 0;
+  }
+
   #Home_section5 > p:nth-of-type(2) {
     margin: 0.5rem 0 2.5rem 0;
-  }
-  #Home_section5_main {
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
   }
   #Home_section5_main hr {
     margin: 0rem auto 0.25rem auto;
   }
   #Home_section5_main_categories {
-    width: auto;
+    width: 30%;
   }
-  #Home_section5_main div:nth-of-type(2) {
-    text-align: center;
-  }
-  #Home_section5_main div:nth-of-type(2) hr {
-    margin: 0 auto;
-  }
-  #Home_section5_main div:nth-of-type(2) h2 {
-    margin-top: 1.5rem;
+  #Home_section5_main_categories li {
+    width: 90%;
   }
   #Home_section5_main_categories h2 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+  }
+  .home-preview-tracks-container h2{
+    font-size: 1.2rem;
   }
   #Home_section5 > hr {
     margin: 1.5rem;
   }
+  #Home_section5_main > div:nth-of-type(2){
+    margin-left: 1.5rem;
+  }
   #Home_section5_main > div:nth-of-type(2) div {
     margin: 1.25rem 0;
+  }
+}
+
+@media (max-width: 480px) {
+  #Home_section5_main{
+    flex-direction: column;
+  }
+
+  #Home_section5_main_categories{
+    width: 100%;
+  }
+
+  #Home_section5_main_categories ul {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  #Home_section5_main_categories ul li {
+    font-size: 12px;
+    flex-basis: 30%; /* Adjust the width as needed */
+    margin-bottom: 10px; /* Space between rows */
+    text-align: center;
+  }
+
+  .home-preview-tracks-container {
+    margin-top: 20px;
+  }
+
+  .home-preview-tracks-container div {
+    margin-bottom: 15px;
+  }
+
+  #Home_section5_main div:nth-of-type(2) p{
+    font-size: 16px;
+    display: inline-block;
+  }
+
+  #Home_section5_main div:nth-of-type(2) span{
+    margin-left: 5px;
+    font-size: 14px;
+    display: inline-block;
+  }
+
+  /* Optional: Style for active category */
+  .category-active {
+    font-weight: bolder;
+    color: blue; /* Change as per your design */
   }
 }
