--- a/src/assets/css/UserDashboard/MyPlans_Content.css
+++ b/src/assets/css/UserDashboard/MyPlans_Content.css
@@ -15,13 +15,14 @@
   .song-table {
     width: 100%;
     margin-bottom: 20px;
-    table-layout: fixed;
+    /* table-layout: fixed; */
   }
   
   .song-table th,
   .song-table td {
     text-align: left;
     padding: 10px;
+    max-width: 20%;
   }
   
   .song-table th {
@@ -37,19 +38,34 @@
   .song-table tr:nth-child(even) td {
     background-color: #2e2e2e;
   }
-  
+
+  .td-checkbox {
+    width: 10%;
+  }
+  .td-download{
+    width: 10%;
+  }
+  .td-song,
+  .td-category {
+    width: 20%;
+  }
+
   .download-icon {
     color: #00f;
     cursor: pointer;
   }
 
-  .listen{
+  .audio-player{
+    background-color: white;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    border-radius: 20px;
+    padding: 0 10px 0 5px;
+    position: relative;
   }
 
-  .listen-button {
+  .play-button {
     background: none;
     border: none;
     color: white;
@@ -58,31 +74,75 @@
     margin: 5px;
     padding: 0;
   }
-  .listen-button:hover{
+  .play-button:hover{
     background: none;
   }
 
   progress {
-    width: 100%;
-    height: 5px; /* You can adjust as needed */
-    color: #00f; /* Color of the progress bar */
-    -webkit-appearance: none; /* Override default appearance */
+    width: 60%;
+    height: 3px; 
+    color: #00f;
+    -webkit-appearance: none;
     appearance: none;
+    margin-right: 7px;
+    cursor: pointer;
   }
 
   progress::-webkit-progress-bar {
-    background-color: #eee; /* Color of the background of the bar */
+    background-color: #BBBBBB; 
   }
   
   progress::-webkit-progress-value {
-    background-color: #00f; /* Color of the progress indicator */
+    background-color: #00f;
   }
   
   /* For other browsers like Firefox */
   progress::-moz-progress-bar {
-    background-color: #00f; /* Color of the progress indicator */
+    background-color: #00f;
   }
   
+  .audio-duration{
+    font-size: 12px;
+    color: black;
+  }
+
+  /* .volume-control-container svg{
+    position: absolute;
+  } */
+
+  .volume-control {
+    position: relative;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    cursor: pointer;
+  }
+
+  .volume-icon {
+    position: absolute;
+    top: -25px;
+    font-size: 12px;
+  }
+
+  .volume-slider {
+    position: absolute;
+    writing-mode: bt-lr; /* Make the slider vertical */
+    -webkit-appearance: slider-vertical; /* For WebKit browsers */
+    width: 8px; /* Adjust width as needed */
+    height: 50px; /* Adjust height as needed */
+    opacity: 0; /* Hide initially */
+    transition: opacity 0.3s;
+    cursor: pointer;
+    display: none;
+  }
+  
+  .volume-control:hover .volume-slider {
+    display: block;
+    opacity: 0;
+  }
+
   .download-all-btn {
     background-color: #0066cc;
     color: #fff;
@@ -108,6 +168,12 @@
     margin-bottom: 50px;
   }
   
+  @media (max-width: 1024px) {
+    .audio-duration{
+      display: none;
+    }
+  }
+
   @media (max-width: 768px) {
     .song-table th,
     .song-table td {
@@ -115,7 +181,7 @@
       font-size: 0.8em;
     }
 
-    .listen-button {
+    .play-button {
         background: none;
         border: none;
         color: #00f;
@@ -133,7 +199,6 @@
     }
   }
   
-
   @media (max-width: 480px) {
     .song-table-container {
       overflow-x: auto;
