--- a/src/assets/css/Login/Login.css
+++ b/src/assets/css/Login/Login.css
@@ -70,6 +70,7 @@ body {
   }
   .login-button:hover {
     border: solid 2px #fff;
+    background-color: transparent;
   }
   .login-signup-text {
     margin-top: 1em;
