--- a/src/assets/css/Admin/AdminHeader.css
+++ b/src/assets/css/Admin/AdminHeader.css
@@ -80,7 +80,7 @@
     position: absolute;
     background-color: #fff;
     border: solid white 1px;
-    margin-top: 0.8em;
+    margin-top: 1.2em;
     min-width: 160px;
     border-radius: 10px;
     z-index: 1;
@@ -98,6 +98,7 @@
     font-weight: 500;
     width: 100%;
     display: block;
+    margin-top: 0px;
 }
 
 /* Styles for mobile behavior */
